<FIX> EntityModal now scrollable if height < viewport height and scrollbar not visible othervise -> fixed margin error on <p>

--- a/binge-book/src/Components/EntityModal/EntityModal.css
+++ b/binge-book/src/Components/EntityModal/EntityModal.css
@@ -11,7 +11,7 @@
 	align-content: center;
 }
 .entitymodal-box{
-    overflow-y: hidden;
+    overflow-y: auto;
     border-radius: 5px;
     padding: 0;
     max-width: 600px;
